--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
-
 /* Your CSS Code here. */
+.holder {
+	width:100vw;
+	height:100vh;
+	display:flex;
+}
+.item-1 {
+	justify-content:center;
+	align-items:center;
+	width:100px;
+	height:100px;
+	background-color:red;
+	
+}
